Fix the issue that scrollbar does not appear in issue board card side info

--- a/server-core/src/main/java/io/onedev/server/web/asset/perfectscrollbar/perfect-scrollbar.css
+++ b/server-core/src/main/java/io/onedev/server/web/asset/perfectscrollbar/perfect-scrollbar.css
@@ -7,7 +7,6 @@
   -ms-overflow-style: none;
   touch-action: auto;
   -ms-touch-action: auto;
-  position: relative;
 }
 
 /*
