--- a/server-core/src/main/java/io/onedev/server/web/page/project/builds/detail/build-detail.css
+++ b/server-core/src/main/java/io/onedev/server/web/page/project/builds/detail/build-detail.css
@@ -33,7 +33,6 @@
 #build-detail>.main>.error-message {
     font-size: 13px;
     max-height: 100px;
-    overflow: auto;
     position: relative;
 }
 #build-detail>.main>.commit-info {
